@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.109 2005/05/01 06:33:41 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.110 2005/05/02 14:33:21 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  2 May 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Readded resizing support.
 
   1 May 2005; Andrew Gaffney <agaffney@gentoo.org>
   PartProperties gets cur_size parameter. PartProperties allows sliding bar
