@@ -1,10 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.160 2005/04/30 05:41:24 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.161 2005/05/02 14:33:21 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
 
-  20 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  1 May 2005; Andrew Gaffney <agaffney@gentoo.org>
+  get_max_mb_for_resize() returns -1 if not self.resizeable
+
+  30 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   More dirty rsync hacks :-/
 
   29 Apr 2005; Preston Cody <codeman@gentoo.org>
